--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <center>
     <nav>
     <div class="buttons">
-      <a href="aboutme.html" class="button">About Me</a>
+      <a href=".aboutme" class="button">About Me</a>
       <a href="resume.html" class="button">Resume</a>
       <a href="contacts.html" class="button">Contacts</a>
       <a href="projects.html" class="button">Projects</a>
@@ -36,6 +36,18 @@
   </div>
  
 
+<div class="aboutme">
+  <div class="profile">
+    <img src="Alex2.jpeg" alt="Profile Picture" width="150">
+    <h1>Alexander Lavarias</h1>
+    <p>Information Technology Student</p>
+    <h2>About Me</h2>
+    <p>I am Alexander Lavarias, born in Baguio City, Benguet. I am 22 years old. I'm a second-year student of the Bachelor of Science in Information Technology, majoring in Network and Security. My original plan was to pursue accounting and become a certified public accountant in the future, but as time goes by, I enjoy discovering innovations in technology, internet configuration, and website making.</p>
+    <div class="goback">
+      <a href="index.html">Go Back</a>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
