--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <center>
     <nav>
     <div class="buttons">
-      <a href=".aboutme" class="button">About Me</a>
+      <a href="aboutme.html" class="button">About Me</a>
       <a href="resume.html" class="button">Resume</a>
       <a href="contacts.html" class="button">Contacts</a>
       <a href="projects.html" class="button">Projects</a>
